# extendedjson

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yaml  publish.yaml
changelog.d/: 20220621_171112_5621605+RodrigoGiraoSerrao.md  20220630_003921_5621605+RodrigoGiraoSerrao.md  20220706_182103_5621605+RodrigoGiraoSerrao.md  20220725_105018_5621605+RodrigoGiraoSerrao_1_3.md  20220728_093451_5621605+RodrigoGiraoSerrao.md  20220728_094214_5621605+RodrigoGiraoSerrao.md  20220728_095740_5621605+RodrigoGiraoSerrao.md
extendedjson/: __init__.py
tests/: test_extendedjson.py
