[tool.poetry]
name = "extendedjson"
version = "0.1.3"
description = "Easily extend JSON to encode and decode arbitrary Python objects."
authors = ["Rodrigo Girão Serrão <5621605+RodrigoGiraoSerrao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
scriv = {extras = ["toml"], version = "^0.15.2"}

[tool.scriv]
format = "md"
version = "literal: extendedjson/__init__.py: __version__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
